# Dynamical

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  config.3.json  flake.nix  vcpkg-configuration.json  vcpkg.json  vcpkg_packages.txt
.claude/: settings.local.json
docs/: PHASE3-TESTING-RESULTS.md  llm-ai-system.md  phase-3-implementation.md  phase-4-implementation-plan.md
docs/actions/: README.md  build.md  craft.md  explore.md  fish.md  flee.md  hunt.md  mine.md  sleep.md  talk.md  trade.md
docs/phases/: README.md  phase-1-action-system-foundation.md  phase-2-personality-and-memory.md  phase-3-llm-infrastructure.md  phase-4-game-integration.md  phase-5-ui-and-visualization.md  phase-6-action-implementation.md
docs/systems/: talk_dialogue_system.md
extra/raycast/: CMakeLists.txt
src/: main.cpp
src/ai/: action_base.h  action_descriptor.h  action_id.h  action_registry.cpp  action_registry.h  action_registry_init.cpp  action_stage.h  ai.cpp  ai.h  aic.h  building_placement.h  prerequisite_resolver.cpp  prerequisite_resolver.h
src/ai/actions/: action.h  build_action.cpp  build_action.h  chop_action.cpp  chop_action.h  craft_action.cpp  craft_action.h  eat_action.cpp  eat_action.h  explore_action.cpp  explore_action.h  fish_action.cpp  fish_action.h  flee_action.cpp  flee_action.h  harvest_action.cpp  harvest_action.h  hunt_action.cpp  hunt_action.h  mine_action.cpp  mine_action.h  sleep_action.cpp  sleep_action.h  talk_action.cpp  talk_action.h  trade_action.cpp  trade_action.h  wander_action.cpp  wander_action.h
src/ai/behaviors/: behavior.h  eat_behavior.cpp  eat_behavior.h  wander_behavior.cpp  wander_behavior.h
src/ai/conversation/: conversation.h  conversation_manager.cpp  conversation_manager.h
src/ai/crafting/: recipe_registry.cpp  recipe_registry.h
src/ai/identity/: entity_identity.h
src/ai/memory/: ai_memory.cpp  ai_memory.h
src/ai/personality/: personality.h  personality_generator.cpp  personality_generator.h
src/ai/speech/: speech_bubble.h  speech_bubble_render_sys.cpp  speech_bubble_render_sys.h  speech_bubble_sys.cpp  speech_bubble_sys.h
src/extra/PID/: PID.cpp  PID.h
src/llm/: decision_cache.cpp  decision_cache.h  llm_client.cpp  llm_client.h  llm_manager.cpp  llm_manager.h  prompt_builder.cpp  prompt_builder.h  response_parser.cpp  response_parser.h
src/logic/: game.cpp  game.h  game_set.cpp  game_set.h  settings.cpp  settings.h
src/logic/ai/: action.h  ai.cpp  ai.h  aic.h
src/logic/components/: action_bar.h  basic_needs.h  building.h  camera.h  camerac.h  chopping.h  construction.h  crafting.h  eat.h  edible.h  editor_contextc.h  editorcontrolc.h  harvest.h  harvestable.h  harvested.h  human.h  input.h  inputc.h  inventory.h  item.h  map_configuration.h  map_upload_data.h  mining.h  model_renderablec.h  object.h  objectc.h  particle_simulation_data.h  path.h  pathc.h  physicsc.h  plant.h  playerc.h  position.h  positionc.h  renderable.h  renderablec.h  selection.h  selectionc.h  storage.h  time.h  (+6 more)
src/logic/factories/: factory_list.cpp  factory_list.h  item_factory.h  object_factory.cpp
src/logic/map/: chunk.h  map_generator.cpp  map_generator.h  map_manager.cpp  map_manager.h  tile.h
src/logic/settings/: map_configuration.cpp  map_configuration.h  settings.cpp  settings.h
src/logic/systems/: action_bar.cpp  basic_needs.cpp  building_render.cpp  building_render.h  camera.cpp  chop.cpp  chunk_generation.cpp  chunk_generator.cpp  conversation.cpp  conversation.h  craft.cpp  debug.cpp  devmenu.cpp  eat.cpp  editor_control.cpp  game_set.cpp  harvest.cpp  input.cpp  input.h  llm_debug.cpp  map_configurator.cpp  map_editor.cpp  map_render.cpp  map_render.h  map_upload.cpp  map_upload.h  mine.cpp  object_render.cpp  object_render.h  particle_simulation.cpp  particle_simulation.h  pather.cpp  personality_inspector.cpp  physics.cpp  physics.h  player_control.cpp  selection.cpp  selection.h  server_network.cpp  spectator_control.cpp  (+17 more)
src/renderer/: camera.cpp  camera.h  context.cpp  context.h  device.cpp  device.h  input.cpp  input.h  instance.cpp  instance.h  num_frames.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  transfer.cpp  transfer.h  ui.cpp  view_ubo.h  vk.h  vk_util.cpp  vk_util.h  vmapp.cpp  vmapp.h  vr_context.cpp  vr_context.h  vr_input.cpp  vr_input.h  windu.cpp  windu.h  xr.h
src/renderer/classic_render/: classic_render.cpp  classic_render.h  renderpass.cpp  renderpass.h
src/renderer/context/: compute.cpp  compute.h  context.cpp  context.h  device.cpp  device.h  instance.cpp  instance.h  num_frames.h  swapchain.cpp  swapchain.h  transfer.cpp  transfer.h  vr_context.cpp  vr_context.h  windu.cpp  windu.h
src/renderer/main_render/: main_render.cpp  main_render.h  object_render.cpp  object_render.h  renderpass.cpp  renderpass.h  ubo_descriptor.h  ui_render.cpp  ui_render.h
src/renderer/marching_cubes/: chunk.h  marching_cubes.cpp  marching_cubes.h  mc_pipeline.cpp  mc_pipeline.h  terrain.cpp  terrain.h
src/renderer/model/: bufferc.h  gltf_loader.cpp  gltf_loader.h  imagec.h  materialc.h  model_manager.cpp  model_manager.h  modelc.h
src/renderer/object/: object_render.cpp  object_render.h
src/renderer/shaders/: buildingrender.frag.glsl  buildingrender.vert.glsl  maprender.frag.glsl  maprender.vert.glsl  object.frag.glsl  object.vert.glsl  objectrender.frag.glsl  objectrender.vert.glsl  particle.comp.glsl  uirender.vert.glsl
src/renderer/ui/: ui.cpp  ui.h  ui_render.cpp  ui_render.h
src/renderer/util/: vk.h  vk_debug.h  vk_util.cpp  vk_util.h  vmapp.cpp  vmapp.h  xr.h
src/renderer/vr_render/: material_manager.cpp  material_manager.h  object_render.cpp  object_render.h  renderpass.cpp  renderpass.h  ubo_descriptor.cpp  ui_render.cpp  (+5 more)
src/util/: color.h  entt_util.h  log.cpp  log.h  profile.h  quad_tree.h  tiled_noise.h  util.cpp  util.h
tests/: CMakeLists.txt
tests/fixtures/: action_registry_init_stub.cpp  test_fixtures.h
tests/llm/: test_decision_cache.cpp  test_llm_client.cpp  test_llm_manager.cpp  test_prompt_builder.cpp  test_response_parser.cpp
(+36 files in other folders)
